--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@
 /trabajo2dia/pe_java/vectores/nbproject/private/
 /trabajo2dia/pe_java/proyecto.web/nbproject/private/
 /trabajo2dia/pe_java/ex02_estructura_algoritmo/build/
+/trabajo2dia/pe_java/proyecto.web/build/
+/trabajo2dia/pe_java/uml/nbproject/private/
+/trabajo2dia/pe_java/uml/build/
