--- a/trabajo2dia/pe_java/uml/nbproject/project.properties
+++ b/trabajo2dia/pe_java/uml/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/vectores.jar
+dist.jar=${dist.dir}/uml.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/vectores
+dist.jlink.output=${dist.jlink.dir}/uml
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=vectores
-main.class=vectores.Vectores
+jlink.launcher.name=uml
+main.class=views.main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
